--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 Passionné par la création d'expériences web exceptionnelles.</br>
                  Je combine créativité et expertise technique pour donner</br> vie à vos projets.
               <div class="hero-buttons">
-                <a href="#CV" class="btn btn-primary me-0 me-sm-2 mx-1"><i class="bi bi-download me-2"></i>Télécharger Cv
+                <a href="all/cv-achiepo.pdf" download="CV_Achiepo" class="btn btn-primary me-0 me-sm-2 mx-1"><i class="bi bi-download me-2"></i>Télécharger Cv
                 </a>
                 <a href="#projet réalisés" class="btn btn-primary me-0 me-sm-2 mx-1" class="section projet réalisés">Projets</a>
               </div>
@@ -79,7 +79,7 @@
 
       <div class="container section-title" data-aos="fade-up">
         <h2>Compétences</h2>
-        <p>Technologies que je maîtrise</p>
+        <p>Technologies utilisés</p>
       </div><!-- fin Section Title -->
 
         <div class="row gy-4">
@@ -216,37 +216,37 @@
 
           <div class="col-xl-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
             <div class="box jaune">
-              <img src="" class="img-fluid" alt="">
-              <h4>E-commerce</h4>
-              <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
-              <a href="">Voir...</a>
+              <img src="./all/img/Screenshot - 2025-01-27 21-21-56.png" class="img-fluid" alt="portfolio">
+              <h4>Site pour restaurant</h4>
+              <p>Une plateforme intuitive pour présenter le menu, gérer les commandes et attirer plus de clients.</p>
+              <a href="https://voyageagency.netlify.app"class="btn btn-primary">Voir le projet</a>
             </div>
           </div><!-- fin Borx-->
 
           <div class="col-xl-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="box aqua">
-              <img src="" alt="">
-              <h4>E-commerce</h4>
-              <p>Est autem dicta beatae suscipit. Sint veritatis et sit quasi ab aut inventore</p>
-              <a href="">Voir...</a>
+              <img src="./all/img/Capture 1.png" class="img-fluid" alt="portfolio">
+              <h4>Agence de voyage</h4>
+              <p>Des services sur mesure pour organiser des séjours inoubliables en toute simplicité.</p>
+              <a href="https://voyageagency.netlify.app/agence%20de%20voyage"class="btn btn-primary">Voir le projet</a>
             </div>
           </div><!-- fin Borx-->
 
           <div class="col-xl-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="box bleu">
-              <img src="" alt="">
-              <h4>E-commerce</h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
-              <a href="">Voir...</a>
+              <img src="./all/img/Projet 3.png" class="img-fluid"style="width: 400%;" alt="portfolio">
+              <h4>Boutique</h4>
+              <p>Une collection tendance et variée pour tous les styles et occasions.</p>
+              <a href="https://magasin-checkpoint2.vercel.app"class="btn btn-primary">Voir le projet</a>
             </div>
           </div><!-- fin Borx-->
 
           <div class="col-xl-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="box light">
-              <img src="" alt="">
-              <h4>E-commerce</h4>
-              <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
-              <a href="">Voir...</a>
+              <img src="./all/img/Screenshot - 2025-01-27 21-48-09.png" class="img-fluid" alt="portfolio">
+              <h4>Outils de gestion</h4>
+              <p>Des solutions efficaces pour simplifier les tâches et optimiser la productivité.</p>
+              <a href="https://chipper-travesseiro-427819.netlify.app/" class="btn btn-primary">Voir le projet</a>
             </div>
           </div><!-- fin Borx-->
         </div>
@@ -381,7 +381,7 @@
                 </div>
                 <div class="content">
                   <h4 class="me-5">Email Address</h4>
-                  <p>yvansachiel@iicloud.com</p>
+                  <p>yvansachiel@icloud.com</p>
                   <p></p>
                 </div>
               </div>
@@ -442,11 +442,11 @@
             <p><strong>Email:</strong> <span>yvansachiel@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
+            <a href="https://github.com/Achiepo"><i class="bi bi-github"></i></a>
             <a href=""><i class="bi bi-tiktok"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
             <a href=""><i class="bi bi-instagram"></i></a>
             <a href=""><i class="bi bi-linkedin"></i></a>
-            <a href=""><i class="bi bi-github"></i></a>
           </div>
         </div>
 
