--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 Passionné par la création d'expériences web exceptionnelles.</br>
                  Je combine créativité et expertise technique pour donner</br> vie à vos projets.
               <div class="hero-buttons">
-                <a href="all/cv-achiepo sachiel yvan.pdf.pdf" download="CV_Achiepo" class="btn btn-primary me-0 me-sm-2 mx-1"><i class="bi bi-download me-2"></i>Télécharger Cv
+                <a href="all/cv-Achiepo sachiel yvan.pdf.pdf" download="CV_Achiepo" class="btn btn-primary me-0 me-sm-2 mx-1"><i class="bi bi-download me-2"></i>Télécharger Cv
                 </a>
                 <a href="#projet réalisés" class="btn btn-primary me-0 me-sm-2 mx-1" class="section projet réalisés">Projets</a>
               </div>
