--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 Passionné par la création d'expériences web exceptionnelles.</br>
                  Je combine créativité et expertise technique pour donner</br> vie à vos projets.
               <div class="hero-buttons">
-                <a href="all/cv-achiepo sachiel yvan.pdf.pdf" download="CV_Achiepo" style=" background-color:  var(--Jaune-color); border-radius: 50px;" class="btn btn-me-0 me-sm-2 mx-1"><i class="bi bi-download me-2"></i>Télécharger Cv
+                <a href="all/cv-achiepo sachiel yvan.pdf (2).pdf" download="CV_Achiepo" style=" background-color:  var(--Jaune-color); border-radius: 50px;" class="btn btn-me-0 me-sm-2 mx-1"><i class="bi bi-download me-2"></i>Télécharger Cv
                 </a>
                 <a href="#Porfolio" class="btn btn- me-0 me-sm-2 mx-1"style=" background-color:  var(--Jaune-color); border-radius: 50px; class="section projet réalisés">Projets</a>
               </div>
