--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           <!-- Carte 2 : Agence de voyage -->
           <div class="col-xl-3 col-md-6">
             <div class="card shadow-sm">
-              <img src="./all/img/Capture 6.png" class="card-img-top" alt="Agence de voyage">
+              <img src="./all/img/capture 6.png" class="card-img-top" alt="Agence de voyage">
               <div class="card-body">
                 <h5 class="card-title">Agence de voyage</h5>
                 <p class="card-text">Des services sur mesure pour organiser des séjours inoubliables en toute simplicité.</p>
