mise a jours du site

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             <div class="card shadow-sm">
               <img src="./all/img/Screenshot - 2025-05-16 18-55-19.png" class="card-img-top" alt="Site pour restaurant">
               <div class="card-body">
-                <h5 class="card-title">Pharmacie</h5>
+                <h5 class="card-title"> Site Pharmacie complet</h5>
                 <p class="card-text">Nous vous offrons des conseils personnalisés pour répondre à tous vos besoins de santé. Notre priorité.</p>
                 <a href="https://pharmacie3-0.vercel.app/" class="btn btn-primary mt-3">Voir le projet</a>
               </div>
